--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: helvetica, arial, sans-serif;
+  margin: 0;
 }
 
 h1 {
@@ -7,6 +8,25 @@ h1 {
   text-align: center;
 }
 
+/* Make the page a positioning context for draggable cats */
+#page {
+  position: relative;
+  min-height: 100vh;
+}
+
+/* CAT TREE / MAIN STAGE (use this if you have <div id="cat-tree"> ... ) */
+#cat-tree {
+  position: relative;
+  width: 70%;
+  height: 90vh;
+  margin: 0 auto;
+  background-image: url("./images/cat-tree.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/* Side containers (only keep if you still use them) */
 #left-container {
   left: 0px;
 }
@@ -23,85 +43,25 @@ h1 {
   padding: 10px;
 }
 
-.plant-holder {
+/* If you still keep cat “slots” on the side */
+.cat-holder {
   position: relative;
   height: 13%;
   left: -10px;
 }
 
-/* CHANGED: .plant -> .cat */
+/* Draggable cats */
 .cat {
-  position: absolute;
+  position: absolute;          /* required for your drag script */
   max-width: 150%;
   max-height: 150%;
   z-index: 2;
-  touch-action: none; /* helps pointer dragging on touchpads/mobile */
+  touch-action: none;
+  cursor: grab;
 }
 
-/*https://codepen.io/Rotarepmi/pen/rjpNZY*/
-
-.jar-walls {
-  height: 80%;
-  width: 60%;
-  background: #d1e1df;
-  border-radius: 1rem;
-  position: absolute;
-  bottom: 0.5%;
-  left: 20%;
-  opacity: 0.5;
-  z-index: 1;
+.cat:active {
+  cursor: grabbing;
 }
 
-.jar-top {
-  width: 50%;
-  height: 5%;
-  background: #d1e1df;
-  position: absolute;
-  bottom: 80.5%;
-  left: 25%;
-  opacity: 0.7;
-  z-index: 1;
-}
-
-.jar-bottom {
-  width: 50%;
-  height: 1%;
-  background: #d1e1df;
-  position: absolute;
-  bottom: 0%;
-  left: 25%;
-  opacity: 0.7;
-}
-
-.dirt {
-  width: 60%;
-  height: 5%;
-  background: #3a241d;
-  position: absolute;
-  border-radius: 0 0 1rem 1rem;
-  bottom: 1%;
-  left: 20%;
-  opacity: 0.7;
-  z-index: -1;
-}
-
-.jar-glossy-long {
-  width: 3%;
-  height: 20%;
-  border-radius: 2rem;
-  background: #ddfbff;
-  position: absolute;
-  bottom: 20%;
-  left: 5%;
-}
-
-.jar-glossy-short {
-  width: 3%;
-  height: 5%;
-  border-radius: 2rem;
-  background: #ddfbff;
-  position: absolute;
-  bottom: 45%;
-  left: 5%;
-}
 
